test-data/negative/missing_mode_keyword.aadl
-- ERROR: Missing 'mode' keyword in mode declaration
package missing_mode_keyword
public
    system s
    modes
        m1: initial;
        m2:;
    end s;
end missing_mode_keyword;
